Ensure the uniqueness of the generated short code

--- a/QUurls/urlShort/templates/urlShort/short_link_generated.html
+++ b/QUurls/urlShort/templates/urlShort/short_link_generated.html
@@ -6,5 +6,7 @@
 
 {% block content %}
     <h2>Short Link Generated</h2>
-    <p>Your short link is: <a href="{% url 'redirect_to_original' short_code %}">{{ short_code }}</a></p>
+    <p>Your short link is: <a id="shortLink" href="{% url 'redirect_to_original' short_code %}">{{ short_code }}</a></p>
+    
+    
 {% endblock %}
