Change the name of RedirectOriginalView to more meaningful name ShortLinkRedirectView

--- a/QUurls/urlShort/templates/urlShort/short_link_generated.html
+++ b/QUurls/urlShort/templates/urlShort/short_link_generated.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h2>Short Link Generated</h2>
-    <p>Your short link is: <a id="shortLink" href="{% url 'redirect_to_original' short_code %}">http://127.0.0.1:8000/{{ short_code }}</a></p>
+    <p>Your short link is: <a id="shortLink" href="{% url 'short_link_redirect' short_code %}">http://127.0.0.1:8000/{{ short_code }}</a></p>
     
     <!-- Button to copy the short_code -->
     <button onclick="copyToClipboard()">Copy Link</button>
